# console-svg-to-pdf

./: README.md
wasvgtopdf/: INSTALL.txt  Makefile.am  Makefile.in  configure  configure.ac  configure.scan  wasvg.cc  wasvg.h
wasvgtopdf/Linux64/: libcroco-0.6.so.3  libffi.so.6  libfontconfig.so.1  libfreetype.so.6  libgdk_pixbuf-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgthread-2.0.so.0  libharfbuzz.so.0  libjpeg.so.9  libpango-1.0.so.0  libpangocairo-1.0.so.0  libpangoft2-1.0.so.0  libpangoxft-1.0.so.0  libpng16.so.16  librsvg-2.so.2  libtiff.so.5  libz.so.1  wasvgtopdf
wasvgtopdf/MacOS/: libcroco-0.6.3.dylib  wasvgtopdf
wasvgtopdf/Visual C++/wasvg/: wasvgtopdf.sln
wasvgtopdf/Visual C++/wasvg/lib/: libcairo-2.lib  libcroco-0.6-3.lib  libfontconfig-1.lib  libfreetype-6.lib  libgdk_pixbuf-2.0-0.lib  libgio-2.0-0.lib  libgobject-2.0-0.lib  libjpeg-9.lib  libpango-1.0-0.lib  libpangocairo-1.0-0.lib  libpangoft2-1.0-0.lib  libpangowin32-1.0-0.lib  libpng16-16.lib  librsvg-2-2.lib  libxml2-2.lib  zlib1.lib
wasvgtopdf/Visual C++/wasvg/wasvgtopdf/: wasvgtopdf.vcxproj  wasvgtopdf.vcxproj.filters
wasvgtopdf/Xcode/wasvgtopdf/wasvgtopdf.xcodeproj/: project.pbxproj
wasvgtopdf/Xcode/wasvgtopdf/wasvgtopdf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wasvgtopdf/Xcode/wasvgtopdf/wasvgtopdf.xcodeproj/project.xcworkspace/xcuserdata/miyako.xcuserdatad/: UserInterfaceState.xcuserstate
wasvgtopdf/Xcode/wasvgtopdf/wasvgtopdf.xcodeproj/xcuserdata/miyako.xcuserdatad/xcschemes/: wasvgtopdf.xcscheme
wasvgtopdf/platform/: getopt.cc  getopt.h  utf8.c
